--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,10 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
+    <link rel="stylesheet" href="style.css" />
     <!-- Create and link a CSS file! -->
+
   </head>
+
   <body>
-    <h1>Week 4 Assignment - Part 2</h1>
-    <p>Check console for errors.</p>
+
+    <header> 
+      <h1>Week 4 Assignment - Part 2</h1>
+      <p>Check console for errors.</p>
+    </header>
+
+  <div class="info"> 
+    <h2> My Name is Chameng Vang. </h2>
+    <img src="https://cdn.jdpower.com/ArticleImages/JDPA_2020%20Mazda%20CX-5%20Grand%20Touring%20Signature%20Machine%20Gray%20Front%20View.jpg" width="500" height="300" />
+    <h3> I drive a Mazda CX-5. </h3>
+  </div>
+
   </body>
 </html>
