--- a/assignment/index.html
+++ b/assignment/index.html
@@ -18,7 +18,7 @@
   <div class="info"> 
     <h2> My Name is Chameng Vang. </h2>
     <img src="https://cdn.jdpower.com/ArticleImages/JDPA_2020%20Mazda%20CX-5%20Grand%20Touring%20Signature%20Machine%20Gray%20Front%20View.jpg" width="500" height="300" />
-    <h3> I drive a Mazda CX-5. </h3>
+    <h3> I do not own a car, but I will like to buy and drive a Mazda CX-5 in the near future. </h3>
   </div>
 
   </body>
